[bisected][regression][i965,iris] dEQP-VK.clipping.user_defined.clip_cull_distance.* failing on multiple platforms
Issues looks to have began with mesa=cc7a1874
commit cc7a18741127157e5da60beb0f1b2b7a8465d84c
Author: Rhys Perry <pendingchaos02@gmail.com>
Date: Wed Jan 6 15:24:26 2021 +0000
nir/gather_info: implement partial masking of struct and compact I/O
fossil-db (Sienna):
Totals from 138 (0.10% of 138791) affected shaders:
CodeSize: 504060 -> 482136 (-4.35%)
Instrs: 97318 -> 94518 (-2.88%)
Cycles: 389272 -> 378072 (-2.88%)
VMEM: 14397 -> 14614 (+1.51%); split: +1.76%, -0.25%
SMEM: 9088 -> 9024 (-0.70%)
VClause: 2915 -> 2430 (-16.64%)
SClause: 1790 -> 1791 (+0.06%)
PreVGPRs: 5013 -> 4998 (-0.30%)
Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>
Reviewed-by: Timothy Arceri <tarceri@itsqueeze.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8364>
19884/results/5846462104):
... MESA-INTEL: debug: anv_GetPhysicalDeviceImageFormatProperties2: ignored VkStructureType 1000147000
MESA-INTEL: debug: anv_GetPhysicalDeviceImageFormatProperties2: ignored VkStructureType 1000147000
MESA-INTEL: debug: anv_GetPhysicalDeviceImageFormatProperties2: ignored VkStructureType 1000147000
MESA-INTEL: debug: anv_AllocateMemory: ignored VkStructureType 1000001003 MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) MESA-INTEL: error: ../src/intel/vulkan/anv_formats.c:1378: VK_EXTERNAL_MEMORY_HANDLE_TYPE_DMA_BUF_BIT_EXT requires VK_IMAGE_TILING_LINEAR or VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT (VK_ERROR_FORMAT_NOT_SUPPORTED) ...